# logos-blockchain-ui

./: .clang-format  .gitignore  CMakeLists.txt  README.md  flake.nix  justfile  metadata.json
.github/workflows/: release.yml
app/: CMakeLists.txt  main.cpp  mainwindow.cpp
nix/: app.nix  default.nix  lib.nix
src/: AccountsModel.cpp  AccountsModel.h  BlockModel.cpp  BlockModel.h  BlockchainBackend.cpp  BlockchainBackend.h  BlockchainBackend.rep  BlockchainPlugin.cpp  BlockchainPlugin.h  BlockchainPluginInterface.h  BlockchainView.qml  LogModel.cpp  LogModel.h  blockchain_resources.qrc
src/qml/: BlockchainView.qml
src/qml/controls/: AccountDelegate.qml  BlockDelegate.qml  HashRow.qml  InfoButton.qml  JsonBlock.qml  LogosButton.qml  LogosCopyButton.qml  NoteSelector.qml  TransactionDelegate.qml  qmldir
src/qml/views/: AccountsView.qml  BlocksView.qml  ChannelDepositView.qml  ConfigChoiceView.qml  CryptarchiaInfoView.qml  GenerateConfigView.qml  LeaderRewardsView.qml  LogsView.qml  NodeInfoView.qml  SetConfigPathView.qml  StatusConfigView.qml  TransferView.qml  WalletView.qml  qmldir
tests/: ui-tests.mjs
